# attestly

./: .gitignore  ATTESTLY-OVERVIEW.md  CODING-SPRINT.md  Cargo.toml  README.md  SPRINT-PLAN.md  TODO-MONDAY.md  pre-flight-saturday.md
crates/attestly-cli/: Cargo.toml
crates/attestly-cli/src/: main.rs
crates/attestly-cli/tests/: e2e.rs
crates/attestly-core/: Cargo.toml
crates/attestly-core/src/: checkpoint.rs  error.rs  event.rs  identity.rs  ledger.rs  lib.rs  merkle.rs
crates/attestly-tella/: Cargo.toml  README.md
crates/attestly-tella/src/: adapter.rs  evidence.rs  lib.rs  receipt.rs  upload.rs
crates/attestly-tella/tests/: adapter_test.rs
crates/attestly-verifier/: Cargo.toml
crates/attestly-verifier/src/: lib.rs
examples/: demo.ps1  demo.sh  render_demo.py
landing/: README.md  index.html
proposals/: README.md  conforme-esa-bass-kickstart.md  conforme-letter.html  conforme-letter.md  eic-pitch-deck.md  eic-step1.md  eic-step2-commercial-narrative.md  founder-cv-template.md  iba-eyewitness-outreach.md  isf-research-grant-2026.md  mcgovern-ai-for-humanity-prep.md  nlnet-ngi0-commons-oct.md  otf-iff-concept-note.md  outreach-emails-ready-to-send.md  outreach.md  regulator-brief.md  stf-form-answers.md  stf-proposal.md
tools/grant-form-helper/: LICENSE  README.md  build.js  fixture.html  grant-form-helper.user.js  selftest.js  standalone-template.html  standalone.html  template.user.js
