[workspace]
resolver = "2"
members = [
    "crates/attestly-core",
    "crates/attestly-cli",
    "crates/attestly-verifier",
    "crates/attestly-tella",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Attestly contributors"]
license = "Apache-2.0"
repository = "https://github.com/attestly/attestly"

[workspace.dependencies]
# crypto
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
rs_merkle = "1.5"
rand = "0.8"

# data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }

# storage (SQLite for demo; Postgres for production in Phase 1)
rusqlite = { version = "0.32", features = ["bundled", "blob"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

# error / utility
anyhow = "1"
thiserror = "1"

[profile.dev]
opt-level = 0
debug = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
