[package]
name = "attestly-tella"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Attestly adapter for Tella — public-anchor cryptographic integrity for journalism and human-rights field evidence."

[dependencies]
attestly-core = { path = "../attestly-core" }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
