[package]
name = "attestly-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Standalone verifier for Attestly evidence bundles — no database dependency."

[dependencies]
attestly-core = { path = "../attestly-core" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
rs_merkle = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
zip = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
